--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,10 +1,17 @@
-FROM python:3.11-slim
+FROM python:3.11
+
+RUN apt-get update && \
+    apt-get install -y curl python3-venv python3-pip && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace
 
 COPY . /workspace
 
-RUN apt-get update && apt-get install -y \
-    curl && \
-    python3-venv && \
-    rm -rf /var/lib/apt/lists/*
+# Set up the virtual environment
+RUN python3 -m venv .venv
+
+# Activate the virtual environment and install dependencies
+RUN . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt
+
+CMD . .venv/bin/activate && pytest --alluredir=allure-results tests/
